# superwrapper-pdf

./: .gitignore  Cargo.toml  LICENSE  README.md  roadmap.md
.qwen/: settings.json
.tdad/: tdad-fixtures.js
.tdad/prompts/: .applied-hashes.json  generate-bdd.md  generate-blueprint.md  generate-project-docs.md  generate-project-scaffold.md  generate-tests.md  golden-packet-multi-feature.md  golden-packet.md
.tdad/workflows/: root.workflow.json
crates/superwrapper-pdf/: Cargo.toml
crates/superwrapper-pdf/benches/: extraction_benchmark.rs
crates/superwrapper-pdf/src/: async_runtime.rs  cache.rs  error.rs  lib.rs  types.rs
crates/superwrapper-pdf/src/engine/: fast.rs  mod.rs  structured.rs  visual.rs
crates/superwrapper-pdf/tests/: error.rs  integration.rs  types.rs
docs/: bindings-research.md  bindings-trd.md  brainstorming.md  roadmap.md
examples/async/: Cargo.toml  main.rs
examples/batch/: Cargo.toml  main.rs
examples/encrypted/: Cargo.toml  main.rs
examples/error-handling/: Cargo.toml  main.rs
examples/fast/: Cargo.toml  main.rs
examples/page-range/: Cargo.toml  main.rs
examples/progress/: Cargo.toml  main.rs
examples/serde-output/: Cargo.toml  main.rs
examples/streaming/: Cargo.toml  main.rs
examples/structured/: Cargo.toml  main.rs
examples/visual/: Cargo.toml  main.rs
openspec/: README.md
openspec/specs/configuration/: spec.md
openspec/specs/error-handling/: spec.md
openspec/specs/fast-text-extraction/: spec.md
openspec/specs/pdf-extraction/: spec.md
openspec/specs/structured-extraction/: spec.md
openspec/specs/unified-engine-interface/: spec.md
openspec/specs/visual-rendering/: spec.md
rust/nodejs-bindings/: Cargo.toml  README.md  binding.gyp  package.json
rust/nodejs-bindings/src/: lib.rs
rust/nodejs-bindings/test/: test.js
rust/python-bindings/: Cargo.toml  README.md  pyproject.toml  test_bindings.py
rust/python-bindings/src/: lib.rs
rust/python-bindings/tests/: test_extraction.py
scripts/: README.md  add-all-aliases.sh  ai-health.sh  ai-orchestrator.sh  backup-skills.sh  claude-env.sh  claude-profile.sh  claude-skills.sh  claude-status.sh  claude-switch.sh  clear-kilo-storage.sh  clear-opencode-storage.sh  clear-sessions.sh  codex-env.sh  codex-profile.sh  codex-skills.sh  codex-status.sh  cost-analyzer.sh  gemini-env.sh  gemini-profile.sh  gemini-skills.sh  gemini-status.sh  git-ai.sh  improvements.md  install-scripts.sh  kilo-env.sh  kilo-profile.sh  kilo-skills.sh  kilo-status.sh  logs_cleanup.sh  ollama-env.sh  ollama-profile.sh  ollama-status.sh  opencode-env.sh  opencode-profile.sh  opencode-skills.sh  opencode-status.sh  pi-setting.sh  pi-skills.sh  pi_skills_combined.sh  (+10 more)
scripts/.qwen/: settings.json
scripts/claude/: add-claude-aliases.sh
scripts/docs/: claude-user-guide.md  gemini-user-guide.md  kilo-user-guide.md  opencode-user-guide.md  qwen-user-guide.md
scripts/examples/claude/claude-accounts/: personal.env.example  work-settings.json.example  work.env.example
scripts/examples/gemini-accounts/: personal.env.example  work-settings.json.example  work.env.example
scripts/examples/kilo-accounts/: personal.env.example  work.env.example
scripts/examples/opencode-accounts/: personal.env.example  work-opencode.json.example
scripts/examples/qwen/qwen-accounts/: personal.env.example  work-settings.json.example  work.env.example
scripts/gemini/: add-gemini-aliases.sh
scripts/kilo/: add-kilo-aliases.sh
scripts/kilo/docs/: kilo-multi-account-management.md
scripts/kilo/examples/kilo-accounts/: work-opencode.json.example
scripts/kilo/scripts/: README.md  kilo-env.sh  kilo-profile.sh
scripts/lib/: clear-sessions.py  common.sh  usage-claude.py  usage-gemini.py  usage-kilo.py  usage-ollama.py  usage-opencode.py  usage-qwen.py
scripts/opencode/: PROPOSAL.md  add-opencode-aliases.sh
scripts/opencode/docs/: opencode-multi-account-management.md
scripts/opencode/examples/opencode-accounts/: bedrock.env.example  personal-opencode.json.example  work.env.example
scripts/opencode/scripts/: README.md  opencode-env.sh  opencode-profile.sh
scripts/qwen/: add-qwen-aliases.sh
tests/: README.md  bats.conf  test-helpers.bash
tests/fixtures/: README.md
tests/fixtures/sessions/: session-001.json  session-002.json
tests/mocks/: mock-curl
tests/unit/: test-common.bats  test-env.bats  test-profile.bats  test-status.bats
thoughts/research/: 2026-04-08_implementation_research.md
