[workspace]
members = [
    "crates/*",
    "examples/fast",
    "examples/structured",
    "examples/visual",
    "examples/async"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Sopaco"]

[workspace.dependencies]
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.10"
criterion = "0.5"
tokio = { version = "1.0", features = ["full"] }

[workspace.metadata.tarpaulin]
features = "all"
out-dir = "coverage"
verbose = true
fail-under = 70
ignore-panics = true
ignore-tests = false

[workspace.metadata.coverage]
min-coverage = 70
