[workspace]
members = [
    "crates/*",
    "examples/fast",
    "examples/structured",
    "examples/visual",
    "examples/async",
    "examples/streaming",
    "examples/progress",
    "examples/encrypted",
    "examples/page-range",
    "examples/batch",
    "examples/error-handling",
    "examples/serde-output"
]
resolver = "2"

[workspace.package]
version = "0.2.1"
edition = "2021"
license = "MIT"
authors = ["Sopaco"]

[workspace.dependencies]
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.10"
criterion = "0.5"
tokio = { version = "1.0", features = ["full"] }

[workspace.metadata.tarpaulin]
features = "all"
out-dir = "coverage"
verbose = true
fail-under = 70
ignore-panics = true
ignore-tests = false

[workspace.metadata.coverage]
min-coverage = 70
