[package]
name = "superwrapper-pdf"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Unified PDF extraction and conversion engine"

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
rayon.workspace = true
tempfile = "3"
tokio = { workspace = true, optional = true }
futures = { version = "0.3", optional = true }
lru = { version = "0.12", optional = true }

pdf_oxide = { version = "0.3", features = ["parallel"] }
unpdf = { version = "0.2", optional = true }
pdfium-render = { version = "0.8", optional = true }
image = { version = "0.25", optional = true }

[dev-dependencies]
tempfile = "3"
assert_fs = "1"
pretty_assertions = "1"
criterion = { workspace = true }
tokio = { workspace = true }

[features]
default = ["structured"]
structured = ["dep:unpdf"]
visual = ["dep:pdfium-render", "dep:image"]
async = ["dep:tokio", "dep:futures", "dep:lru"]
all = ["structured", "visual", "async"]

[[bench]]
name = "extraction_benchmark"
harness = false

[profile.release]
lto = true
codegen-units = 1
