[package]
name = "superwrapper-pdf-nodejs"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Node.js bindings for superwrapper-pdf"
publish = false

[lib]
name = "superwrapper_pdf_nodejs"
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", default-features = false, features = ["napi6"] }
napi-derive = "2"
superwrapper-pdf = { path = "../../crates/superwrapper-pdf", default-features = false, features = ["structured"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(not(target_os = "windows"))'.dependencies]
libc = "0.2"