[package]
name = "superwrapper-pdf-nodejs"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[workspace]

[lib]
name = "superwrapper_pdf_nodejs"
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", default-features = false, features = ["napi6"] }
napi-derive = "2"
superwrapper-pdf = { path = "../../crates/superwrapper-pdf", default-features = false, features = ["structured", "visual"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(not(target_os = "windows"))'.dependencies]
libc = "0.2"